[package]
name = "rustsweeper"
version = "0.1.0"
edition = "2024"
authors = ["Viggo Stark"]
license = "MIT"
homepage = "https://github.com/Voggo/rustsweeper"
repository = "https://github.com/Voggo/rustsweeper"
keywords = ["terminal", "minesweeper", "game", "rust"]
categories = ["games", "command-line-utilities"]
readme = "./README.md"

[dependencies]
anyhow = "1.0.99"
crossterm = "0.29"
rand = "0.9.2"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = 's'
