[package]
name = "termsweeper"
version = "0.1.0"
edition = "2024"
description = "A terminal-based Minesweeper game written in Rust."
authors = ["Viggo Stark"]
license = "MIT"
homepage = "https://github.com/Voggo/termsweeper"
repository = "https://github.com/Voggo/termsweeper"
keywords = ["terminal", "minesweeper", "game", "rust"]
categories = ["games", "command-line-utilities"]
readme = "./README.md"

[dependencies]
anyhow = "1.0.99"
crossterm = "0.29"
rand = "0.9.2"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = 's'
